--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,14 @@
-name: Node CI
+name: CI
 
 on:
   push:
     branches:
       - main
+    tags:
+      - '*'
   pull_request:
+    branches:
+      - main
 
 jobs:
   test:
