--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,68 +11,39 @@ on:
       - main
 
 jobs:
-  test:
-    name: Run tests on supported Node.js versions
+  setup: 
+    name: Setup Node.js and PNPM
     runs-on: ubuntu-latest
-
     strategy:
       fail-fast: false
       matrix:
-        # See supported Node.js versions at https://nodejs.org/en/about/previous-releases
-        node-version: [18, 20, 21]
-
+        node-version: ${{ matrix.node-version }}
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 20
           cache: pnpm
+      - run: npm install pnpm
 
+  test:
+    name: Run tests
+    needs: [setup]
+    steps:
       - name: Install dependencies
         run: pnpm ci --frozen-lockfile
-
       - name: Run tests
         run: pnpm run test
 
   lint:
-    name: Check file linting
-    runs-on: ubuntu-latest
-
+    name: Run lint check
+    needs: [setup]
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: pnpm
-
-      - name: Install dependencies
-        run: pnpm ci --frozen-lockfile
-
-      - name: Check file linting
-        run: pnpm run lint
+      - run: pnpm run lint
 
   check-types:
     name: Check type definitions
-    runs-on: ubuntu-latest
-
+    needs: [setup]
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: pnpm
-
-      - name: Install dependencies
-        run: pnpm ci --frozen-lockfile
-
-      - name: Check type definitions
-        run: pnpm run check-types
+      - run: pnpm run check-types
