--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
 
   test:
     name: Run tests
+    runs-on: ubuntu-latest
     needs: [setup]
     steps:
       - name: Install dependencies
@@ -38,12 +39,14 @@ jobs:
 
   lint:
     name: Run lint check
+    runs-on: ubuntu-latest
     needs: [setup]
     steps:
       - run: pnpm run lint
 
   check-types:
     name: Check type definitions
+    runs-on: ubuntu-latest
     needs: [setup]
     steps:
       - run: pnpm run check-types
