--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: 20
           cache: pnpm
-      - run: npm install pnpm
+      - run: npm install -g pnpm
 
   test:
     name: Run tests
