--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,45 +4,11 @@ on:
   push:
     branches:
       - main
-    tags:
-      - '*'
   pull_request:
     branches:
       - main
 
 jobs:
-  setup: 
-    name: Setup Node.js and PNPM
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version: [20]
-    steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Setup pnpm installation
-        uses: pnpm/action-setup@v4
-        with:
-          version: 8
-          run_install: false
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
   test:
     name: Run tests
     runs-on: ubuntu-latest
@@ -55,6 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [setup]
     steps:
+      - uses: setup@v1
       - run: pnpm run lint
 
   check-types:
