--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,14 +12,13 @@ jobs:
   test:
     name: Run tests
     runs-on: ubuntu-latest
-    needs: [setup]
     steps:
+      - uses: setup@v1
       - run: pnpm run test
 
   lint:
     name: Run lint check
     runs-on: ubuntu-latest
-    needs: [setup]
     steps:
       - uses: setup@v1
       - run: pnpm run lint
@@ -27,6 +26,6 @@ jobs:
   check-types:
     name: Check type definitions
     runs-on: ubuntu-latest
-    needs: [setup]
     steps:
+      - uses: setup@v1
       - run: pnpm run check-types
