--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,19 +13,19 @@ jobs:
     name: Run tests
     runs-on: ubuntu-latest
     steps:
-      - uses: setup@v1
+      - uses: ./setup@v1
       - run: pnpm run test
 
-  lint:
-    name: Run lint check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: setup@v1
-      - run: pnpm run lint
+  # lint:
+  #   name: Run lint check
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: setup@v1
+  #     - run: pnpm run lint
 
-  check-types:
-    name: Check type definitions
-    runs-on: ubuntu-latest
-    steps:
-      - uses: setup@v1
-      - run: pnpm run check-types
+  # check-types:
+  #   name: Check type definitions
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: setup@v1
+  #     - run: pnpm run check-types
