--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,9 @@ jobs:
     name: Run tests
     runs-on: ubuntu-latest
     steps:
-      - uses: ./setup.yml@v1
+      - uses: ./.github/actions/setup
+        with:
+          node-version: 20
       - run: pnpm run test
 
   # lint:
