--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,20 +16,22 @@ jobs:
       - uses: actions/checkout@v4
       - id: setup
         uses: ./.github/actions/setup
-        with:
-          node-version: 20
       - run: pnpm run test
 
-  # lint:
-  #   name: Run lint check
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: setup@v1
-  #     - run: pnpm run lint
+  lint:
+    name: Run lint check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - id: setup
+        uses: ./.github/actions/setup
+      - run: pnpm run lint
 
-  # check-types:
-  #   name: Check type definitions
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: setup@v1
-  #     - run: pnpm run check-types
+  check-types:
+    name: Check type definitions
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - id: setup
+        uses: ./.github/actions/setup
+      - run: pnpm run check-types
