--- a/.xo-config.json
+++ b/.xo-config.json
@@ -1,6 +1,7 @@
 {
   "space": true,
   "rules": {
+    "capitalized-comments": "off",
     "@typescript-eslint/naming-convention": "off",
     "@typescript-eslint/ban-types": [
       "error",
