--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "./package.json": "./package.json"
   },
   "devDependencies": {
+    "ts-arithmetic": "^0.1.1",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0",
     "xo": "^0.58.0"
@@ -25,7 +26,7 @@
     "clean": "rm -rf dist",
     "lint": "xo",
     "check-types": "tsc",
-    "dev": "tsc --declaration --watch",
+    "dev": "pnpm build --watch",
     "test": "vitest",
     "prepublishOnly": "pnpm clean && pnpm run build"
   }
